[package]
name = "umo"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/m0ssc0de/umo"
license = "MIT"
description = "All open time ranges of US stock market"
readme = "Readme.md"

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.0"

[features]
default = ["until_2025"]
until_2025 = []