[package]
name = "umo"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/m0ssc0de/umo"
license = "MIT"
description = "All open time ranges of US stock market"
readme = "Readme.md"

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.0"

[features]
full = ["2023", "2024", "2025"]
2023 = []
2024 = []
2025 = []